# cliject

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
cliject/: api.py  auth.py  board.py  config.py  main.py  models.py  queries.py  render.py
tests/: conftest.py  test_api.py  test_auth.py  test_board.py  test_config.py  test_main.py  test_models.py  test_render.py
widget/: README.md  cliject.1m.sh
