[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cliject"
version = "0.1.0"
description = "GitHub Projects V2 terminal board viewer"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.scripts]
cliject = "cliject.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cliject*"]
