[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cliject"
version = "0.1.0"
description = "GitHub Projects V2 terminal board viewer"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock>=3.15.1", "respx>=0.22.0", "ruff"]

[project.urls]
Homepage = "https://github.com/rudolfjs/cliject"
Source = "https://github.com/rudolfjs/cliject"

[project.scripts]
cliject = "cliject.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cliject*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
uv = "*"

[tool.pixi.pypi-dependencies]
cliject = { path = ".", editable = true }

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
py310 = { features = ["dev", "py310"], solve-group = "py310" }
py311 = { features = ["dev", "py311"], solve-group = "py311" }
py312 = { features = ["dev", "py312"], solve-group = "py312" }
py313 = { features = ["dev", "py313"], solve-group = "py313" }

[tool.pixi.tasks]
test = { cmd = "pytest", description = "Run test suite" }
check = { cmd = "cliject --help", description = "Verify CLI entry point" }
lint = { cmd = "ruff check cliject", description = "Lint source code" }
fmt = { cmd = "ruff format cliject", description = "Format source code" }
fmt-check = { cmd = "ruff format --check cliject", description = "Check formatting (CI)" }
ci = { depends-on = ["lint", "fmt-check", "test"], description = "Full CI: lint, format-check, tests" }
uvx = { cmd = "uvx --from git+https://github.com/rudolfjs/cliject cliject", description = "Run cliject via uvx from git" }

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[dependency-groups]
dev = ["pytest", "ruff", "pytest-mock>=3.15.1,<4", "respx>=0.22.0,<0.23"]
